2010-08-01 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/bug2862650.c:
	  Redundant regression test for #2862650.

2010-08-01 Borut Razem <borut.razem AT siol.net>

	* device/include/ds80c390.h, device/include/tinibios.h,
	  device/include/time.h, device/include/ds390/serial390.h,
	  device/lib/time.c, device/lib/gets.c, device/lib/ds390/lcd390.c,
	  device/lib/ds390/tinibios.c, device/lib/ds390/rtc390.c,
	  device/lib/ds390/i2c390.c, device/lib/ds400/tinibios.c:
	  sdcc library license changed to GPL+LE

2010-07-30 Borut Razem <borut.razem AT siol.net>

	* device/lib/printf_large.c, device/lib/sprintf.c,
	  device/lib/vprintf.c:
	  sdcc library license changed to GPL+LE

2010-07-30 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCC.y: fixed bug 1579664
	* support/regression/tests/bug1579664.c: new, added
	* src/SDCCsymt.c (compareTypeExact): fixed bug 1929140
	* support/regression/tests/bug1929140.c: new, added

2010-07-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCerr.c,
	* src/SDCCerr.h
	* src/SDCCglue.c (printIvalCharPtr),
	* src/SDCCicode.c (geniCodeCast): changed E_LITERAL_GENERIC and
	  E_NONPTR2_GENPTR to warnings
	* support/regression/tests/bug1115321.c: fixed problem on solaris
	* support/regression/tests/literalop.c: only test char overflow on SDCC

2010-07-29 Borut Razem <borut.razem AT siol.net>

	* support/regression/tests/literalop.c:
	  fixed regresssion test failure on host targat (gcc -O2):
	  the test result was udefined according to C standard 6.5 #5 and
	  implementation dependent, so it was removed.
	  Thanks to Jan Waclawek for the explanation that it is not a gcc bug.

2010-07-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/printf_large.c: small optimization
	* src/hc08/gen.c (transferRegReg, genPointerGet): fixed bug 1115321
	* src/hc08/ralloc.c: cosmetic changes
	* src/pic16/glue.c (pic16emitStaticSeg),
	* src/SDCCglue.c (emitStaticSeg): fixed bug 1474589